--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qashot-compare",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Modified version of BackstopJS (3.9.2) Compare React app",
   "scripts": {
     "lint": "eslint '*.js' 'src/**/*.js' 'core/**/*.js' 'cli/**/*.js' 'capture/**/*.js' 'test/**/*.js'",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/garris/backstopjs.git"
+    "url": "https://github.com/brainsum/qashot-compare.git"
   },
   "author": "Brainsum",
   "license": "UNLICENSED",
