--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "qashot-compare",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Modified version of BackstopJS (3.9.2) Compare React app",
   "scripts": {
     "lint": "eslint '*.js' 'src/**/*.js' 'core/**/*.js' 'cli/**/*.js' 'capture/**/*.js' 'test/**/*.js'",
     "format": "prettier-eslint --write \"src/**/*.js\"",
-    "build-compare": "cp ./node_modules/diverged/src/diverged.js ./output/ && cp ./node_modules/diff/dist/diff.js ./output/ && webpack --config ./webpack.config.js",
-    "dev-compare": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base ./output --config ./webpack.config.js",
+    "build": "cp ./node_modules/diverged/src/diverged.js ./output/ && cp ./node_modules/diff/dist/diff.js ./output/ && webpack --config ./webpack.config.js",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --mode development --content-base ./output --config ./webpack.config.js",
     "copy-report-bundle": "mkdir -p test/configs/backstop_data/html_report && cp output/index_bundle.js test/configs/backstop_data/html_report/",
     "build-and-copy-report-bundle": "npm run build-compare && npm run copy-report-bundle"
   },
